resources/css/app.css
/* ... */
.stepperNav .line {
  @apply hidden lg:block w-[68%] h-[1px] bg-gray-200 absolute top-7 left-[16%] z-[0];
}
.stepperNav .item {
  @apply flex flex-row lg:flex-col justify-center items-center gap-2 relative min-w-[130px];
}
.stepperNav .item.current:after {
  content: "";
  @apply h-[3px] bg-primary -bottom-2 -left-2 -right-2 rounded-full absolute;
}
.stepperNav .item .title {
  @apply uppercase font-bold text-sm leading-[15px] text-gray-900;
}
.stepperNav .item.current .title {
  @apply text-primary;
}

/* DATE PICKER */
.datepicker-wrapper.big .react-datepicker {
  @apply border-transparent flex flex-col md:flex-row items-center !important;
}
.datepicker-wrapper.small .react-datepicker {
  @apply border-transparent flex flex-col md:flex-row !important;
}
.datepicker-wrapper.small .react-datepicker {
  @apply shadow-box hover:shadow-box-hover rounded-md p-2;
}
.datepicker-wrapper.big .react-datepicker__month-container {
  @apply w-full md:w-1/2;
}
.datepicker-wrapper .react-datepicker__current-month,
.datepicker-wrapper .react-datepicker-time__header,
.datepicker-wrapper .react-datepicker-year-header {
  @apply text-base !important;
}
.datepicker-wrapper
  .react-datepicker__header.react-datepicker__header--has-time-select {
  @apply w-full bg-transparent;
}
.datepicker-wrapper .react-datepicker__header.react-datepicker__header--time {
  @apply md:hidden block bg-transparent mt-8 border-b-transparent;
}
/* .react-datepicker-time__header {
  @apply mb-12;
} */
.datepicker-wrapper .react-datepicker__time-container {
  @apply border-l-transparent;
}
.datepicker-wrapper .react-datepicker__day-names,
.datepicker-wrapper .react-datepicker__week {
  @apply flex justify-between mt-6 text-sm;
}
.datepicker-wrapper
  .react-datepicker__time-container.react-datepicker__time-container--with-today-button {
  @apply md:w-1/2 w-full;
}
.datepicker-wrapper .react-datepicker__time-container {
  @apply md:w-1/2 w-full;
}
.datepicker-wrapper.big
  .react-datepicker__navigation.react-datepicker__navigation--next.react-datepicker__navigation--next--with-time {
  @apply md:right-[50%] right-[20%];
}
.datepicker-wrapper.small
  .react-datepicker__navigation.react-datepicker__navigation--next.react-datepicker__navigation--next--with-time {
  @apply md:right-[41%] right-0;
}
.datepicker-wrapper
  .react-datepicker__navigation.react-datepicker__navigation--previous {
  @apply md:left-[42%] left-[20%];
}
.datepicker-wrapper.small
  .react-datepicker__navigation.react-datepicker__navigation--previous {
  @apply md:left-[45%] left-0;
}

.datepicker-wrapper .react-datepicker__day {
  @apply text-sm py-1 px-3 flex justify-center items-center;
}
.datepicker-wrapper .react-datepicker__time-box {
  @apply w-full !important;
}
.datepicker-wrapper.big .react-datepicker__time-list-item {
  @apply w-2/3 h-[40px] border border-blue rounded-md my-3 mx-12 py-2 flex justify-center items-center text-sm !important;
}
.datepicker-wrapper.small .react-datepicker__time-list-item {
  @apply w-2/3 h-[40px] border border-blue rounded-md my-3 md:mx-12 mx-1 py-2 flex justify-center items-center text-sm !important;
}
.datepicker-wrapper ul.react-datepicker__time-list {
  @apply flex flex-col items-center !important;
}
.datepicker-wrapper .react-datepicker__day--selected,
.datepicker-wrapper .react-datepicker__day--in-selecting-range,
.datepicker-wrapper .react-datepicker__day--in-range,
.datepicker-wrapper .react-datepicker__month-text--selected,
.datepicker-wrapper .react-datepicker__month-text--in-selecting-range,
.datepicker-wrapper .react-datepicker__month-text--in-range,
.datepicker-wrapper .react-datepicker__quarter-text--selected,
.datepicker-wrapper .react-datepicker__quarter-text--in-selecting-range,
.datepicker-wrapper .react-datepicker__quarter-text--in-range,
.datepicker-wrapper .react-datepicker__year-text--selected,
.datepicker-wrapper .react-datepicker__year-text--in-selecting-range,
.datepicker-wrapper .react-datepicker__year-text--in-range,
.datepicker-wrapper
  .react-datepicker__time-container
  .datepicker-wrapper
  .react-datepicker__time
  .datepicker-wrapper
  .react-datepicker__time-box
  .datepicker-wrapper
  ul.react-datepicker__time-list
  .datepicker-wrapper
  li.react-datepicker__time-list-item--selected {
  @apply bg-blue;
}
.datepicker-wrapper .react-datepicker__day--keyboard-selected,
.datepicker-wrapper .react-datepicker__month-text--keyboard-selected,
.datepicker-wrapper .react-datepicker__quarter-text--keyboard-selected,
.datepicker-wrapper .react-datepicker__year-text--keyboard-selected {
  @apply bg-purple text-white;
}
.datepicker-wrapper.small
  .react-datepicker__time-container
  .react-datepicker__time
  .react-datepicker__time-box {
  @apply overflow-y-auto;
}
.datepicker-wrapper.small .react-datepicker__input-container input {
  @apply w-full;
}
.datepicker-wrapper.small .react-datepicker-popper {
  left: auto !important;
  transform: none !important;
  top: auto !important;
  right: auto !important;
}

